--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "raster-2-obj",
-	"version": "1.0.1",
+	"version": "1.0.2",
 	"private": false,
   "repository": {
     "type": "git",
@@ -24,9 +24,7 @@
 	"dependencies": {
 		"async":"*",
 		"optimist":"*",
-		"delaunay":"*",
 		"poly2tri":"*",
-		"jimp":"*",
-		"potrace":"*"
+		"jimp":"*"
 	}
 }
